updating preferences api
